--- a/src/Components/Button/button.css
+++ b/src/Components/Button/button.css
@@ -5,13 +5,26 @@
 
 .btn {
     background-color: #439EBD;
-    width: 40%;
+    width: 30%;
     height: 10%;
-    margin: 2% 30%;
+    margin: 2% 35%;
     border: 2px solid black;
-    border-radius: 10%/20%;
+    border-radius: 5%/20%;
     display: flex;
     justify-content: space-around;
     align-items: center;
     cursor: pointer;
+}
+
+
+@media screen and (max-width: 800px) {
+    .btn {
+        width: 60%;
+        height: 10%;
+        margin: 2% 20%;
+        border: 2px solid black;
+        border-radius: 10%/20%;
+    }
+
+
 }
