--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -1,26 +1,22 @@
-.home-container {
-    width: 100%;
-    height: 85%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-
 .square-logo {
-    margin-top: 5%;
+    width: 50%;
+    margin: 5% 25% 0;
     box-shadow: 0 0px 15px black;
 }
 
 .bio {
     text-align: center;
-    
-    
-    
-    padding: 10% 5%;
+    width: 75%;
+    margin: 5% 12.5%;
+}
+
+.bio-text {
+    font-size: 1.5em;
 }
 
 .call-container {
     margin-top: 10%;
+    margin-bottom: 10%;
 }
 
 .call-link{
@@ -35,4 +31,31 @@
 .call-tag {
     color: black;
     font-weight: 700;
+}
+
+
+@media screen and (max-width: 600px) {
+.home-container {
+    width: 100%;
+    height: 85%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.square-logo {
+    width: 100%;
+    margin: 20% 0 0;
+}
+
+.bio {
+    width: 80%;
+    margin: 5% 10%;
+}
+
+.bio-text {
+    font-size: 1.1em;
+}
+
+
 }
