--- a/src/Components/PhoneHeader/phoneHeader.css
+++ b/src/Components/PhoneHeader/phoneHeader.css
@@ -22,6 +22,15 @@
     
 }
 
+.wide-menu {
+    width: 95%;
+    margin: 0 2.5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+
 .menu-text {
     color: black;
 }
