--- a/src/default.css
+++ b/src/default.css
@@ -23,7 +23,7 @@ p {
   font-family: forma-djr-micro, sans-serif;
   font-weight: 400;
   font-style: normal;
-  color: black;
+  color: white;
   font-size: 1.1em;
   margin: 0;
 
